2005-03-22  Mirko Maischberger  <mirko@lilik.it>

	* sample/*.rb: sh-bang (!#) normalization.
	Reported by Mezz
	
2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf-format.c: Fix a compilation problemn on GTK+-2.0.x.
	* README: Revised.

2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c: Implement gdk_pixbuf_new_from_file_at_scale 
	as Gdk::Pixbuf.new. 
	* rbgdk-pixbuf-format.c: Added Gdk::PixbufFormat#scalable?,
	#disable?, #set_disabled, #license.
	* rbgdk-pixbuf.c: Added Gdk::Pixbuf#rotate, #flip for GTK+-2.6. 
	* sample/flip.rb, rotate.rb: Added.

2005-02-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Use create_makefile_at_srcdir.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes.

2004-12-16  leon breedt  <bitserf@gmail.com>

	* rbgdk-pixbuf-format.c, rbgdkpixbuf.h: Fix compilation problems.

2004-12-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbufanimation.c: Fix a wrong number of arguments for 
	Gdk::PixbufAnimationIter#advance. 
	* rbgdk-pixbuf.c: Fix memoryleak for Gdk::Pixbuf#add_alpha. 
	* rbgdk-pixbuf-loader.c: Undef Gdk::PixbufLoader#dup.
	* rbgdk-pixbuf.c: Fix a compilation warning. 

2004-11-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf-loader.c: Fix an error message.

2004-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* rbgdk-pixbuf.c, rbgdk-pixbuf-format.c: 
	Fix compiling warning/error under GTK+-2.2.4. 
	* rbgdk-pixbuf-loader.c, extconf.rb: Support GTK+-2.0.x again.

2004-11-06  Geoff Youngs  <g@intersect-uk.co.uk>

	* rbgdk-pixbuf.c: Gdk::Pixbuf.get_file_info()
	  Return image width and height as well as the GdkPixbufFormat

2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/gdk_pixbuf2.rb: Improved log handling.
	Added Gdk::Pixbuf::LOG_DOMAIN.
	Rename GLib::Log.set_error_domain to GLib::Log.set_log_domain.	

2004-08-29  Masao Mutoh  <mutoh@highway.ne.jp>

	* lib/gdk_pixbuf2.rb: Added Gdk::PixbufLoader.open.