@@ -1,3 +1,8 @@
+2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* rbgdk-pixbuf.c, rbgdk-pixbuf-loader.c, rbgdk-pixbuf-format.c: 
+	Fix a compiling warning. 
+
 2005-03-22  Mirko Maischberger  <mirko@lilik.it>
 
 	* sample/*.rb: sh-bang (!#) normalization.
